+Fixed loading screen stuck if error occured in some page.

--- a/css/article-read/article-read.scss
+++ b/css/article-read/article-read.scss
@@ -42,6 +42,7 @@
         justify-content: center;
 
         .comment-create-wrapper{
+            position: relative;
             width: 100%;
             display: flex;
             justify-content: center;
